# sge-utils

./: README.md  conda_sge-utils.yml
SimpleSGEViz/: .gitignore  README.md  make_vcf.py  pipeline.py  pyproject.toml
SimpleSGEViz/sgeviz/: io.py  process.py
SimpleSGEViz/sgeviz/figures/: __init__.py  aa_heatmap.py  base.py  clinvar_strip.py  correlation.py  edit_rate_barplot.py  gene_cartoon.py  histogram_strip.py  maf_score.py  predictor_scatter.py  rna_score.py  scores_gene.py  single_track_cartoon.py
examples/example_inputs/clonalHA_generation/: 20260316_HA_clonalDNA_subset_HA1.fa
examples/example_inputs/library_generation/: 20260317_SGE_All_Oligos_merged_recoded.xlsx
examples/example_inputs/sgeviz/: 20240905_BARD1_gnomADv4.1.0_SNVs.xlsx  BARD1.allscores.v1.2.1.tsv  BARD1.delcounts.tsv  BARD1.editrates.tsv  BARD1.modelparams.v1.2.1.tsv  BARD1.snvcounts.tsv  BARD1_domains.xlsx
examples/example_inputs/sgeviz_inputs_example/: 20250912_BARD1_ClinVarSNVs_1StarPlus.txt  20251002_BARD1snvs_VEP.xlsx  BARD1.targets.tsv
notebook_utils/: SGE_ClonalHA_Generator.ipynb  SGEoligos_SNVandFullMut_libs.ipynb
notebook_utils/standalone_sgeviz/: aa_heatmap.ipynb  clinvar.ipynb  correlation_heatmap.ipynb  edit_rate_barplot.ipynb  gene_cartoon.ipynb  histogram_stripplot.ipynb  maf_vs_score.ipynb  predictor_scatter.ipynb  rna_score.ipynb  scores_across_gene.ipynb  single_track_cartoon.ipynb
useful_scripts/: GetEditRates.sh  SGEColor_ChimeraX_MissenseOnly.py
useful_shell_scripts/: GetEditRates.sh  GetReadCounts.sh
(+3 files in other folders)
