[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sgeviz"
version = "0.1.0"
description = "Command-line pipeline for SGE fitness score visualization"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
sgeviz = "pipeline:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["sgeviz*"]

[tool.setuptools]
py-modules = ["pipeline"]
